changed the purachse, performaand invoice details laout changed and reoslved the overlapiing issue in mac book in product details and resolved the overlap issue in toggle in send inquiries

--- a/src/Buyer/components/Buy/Details/productdetails.module.css
+++ b/src/Buyer/components/Buy/Details/productdetails.module.css
@@ -234,7 +234,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 100%;
+  width: 50%;
 }
 
 .medicinesSection {
@@ -647,23 +647,37 @@ background-color: #282f86;
   flex-direction: column;
   gap: 10px;
 }
-
-@media (max-width: 1400px) {
-  .container {
-    max-width: 100%;
-  }
-
-  .PurcahseButton {
+@media (max-width: 1560px) {
+.container {
+  margin: unset;
+}
+}
+@media (max-width: 1460px) {
+  .medicineHead {
+  width: 220px;
+}
+.container {
+  max-width: 96%;
+}
+.PurcahseButton {
     padding: 6px 0px;
     width: 140px;
     font-size: 12.5px;
   }
+}
+@media (max-width: 1300px) {
+  .container {
+  max-width: 94%;
+}
 }
 
 @media (max-width: 1200px) {
   .medicineHead {
     width: 200px;
   }
+    .container {
+  max-width: 98%;
+}
 }
 
 /* End Product details */
