--- a/src/Buyer/components/Inquiry/cancelinquiry.module.css
+++ b/src/Buyer/components/Inquiry/cancelinquiry.module.css
@@ -39,6 +39,8 @@
     width: 800px;
     outline: none !important;
     border: none !important;
+    color: #616161 !important;
+    font-weight: 500 !important;
     background-color: #ffffff !important;
     padding: 12px !important;
     font-size: 14px !important;
@@ -62,7 +64,7 @@
     border-radius: 4px;
 }
 .form-select-reason-head{
-    color: #192039;
+    color: #212121;
     font-size: 16px;
       font-weight: 500;
 }
@@ -75,7 +77,7 @@ display: flex;
 flex-direction: column;
 }
 .form-cancel-heading{
-    color: #192039;
+    color: #212121;
     font-size: 18px;
       font-weight: 500;
 }
@@ -90,7 +92,8 @@ flex-direction: column;
     font-size: 16px;
 }
 .cancel-inquiry-text{
-    font-size: 15px;
+    font-size: 14px;
+    color: #616161;
     font-weight: 500;
 }
 .buttonContainer {
